--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Open Sans", sans-serif;
-  background-image: url("http://gaeawiki.com/images/4/46/Shijiazhuang_skyline_by_night.jpg");
+  background-image: url("https://i.ytimg.com/vi/V-XBHuHKurc/maxresdefault.jpg");
   background-size: cover
 }
 
