--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   background-image: url("https://i.ytimg.com/vi/V-XBHuHKurc/maxresdefault.jpg");
-  background-size: cover
+  background-size: 100% 100%;
 }
 
 .CrimeRate{
