--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Open Sans", sans-serif;
-  background-image: url("https://i.ytimg.com/vi/V-XBHuHKurc/maxresdefault.jpg");
+  background-image: url("http://a2.att.hudong.com/88/74/20300001051366130657742556721.jpg");
+  background-repeat: no-repeat;
   background-size: 100% 100%;
 }
 
